# AgentHub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build-package.sh  index.html  install-agenthub.sh  install-deps.sh  install-hermes.sh  package-lock.json  package.json  package.scripts.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
landing/: index.html  vercel.json
profiles/comptable/: SOUL.md  config.yaml
profiles/comptable/skills/: gestion-factures.md  suivi-tresorerie.md
profiles/juridique/: SOUL.md  config.yaml
profiles/juridique/skills/: redaction-contrats.md  veille-reglementaire.md
profiles/manager/: SOUL.md  config.yaml
profiles/manager/skills/: planning-briefing.md  relance-clients.md
profiles/marketing/: SOUL.md  config.yaml
profiles/marketing/skills/: creation-contenu.md  gestion-avis-google.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  commands.rs  db.rs  lib.rs  llm.rs  models.rs  orchestrator.rs  packs.rs  scheduler.rs  state.rs  store.rs
src/components/: AgentAvatar.tsx  AmbientCanvas.tsx  Layout.tsx  LicenseBadge.tsx  UpdateChecker.tsx
src/pages/: Agent.tsx  AgentConfig.tsx  Hub.tsx  Settings.tsx  Wizard.tsx
src/services/: api.ts  catalog.test.ts  catalog.ts  hermes.ts  index.ts  license.ts  mock-hermes.test.ts  mock-hermes.ts  preferences.ts  renames.test.ts  renames.ts
